Some structure shuffling, made physical model and Generator class
Former-commit-id: 1ea1632f3ecbbfce05bea0077c38876fa1924d65 [formerly e4214d42ebe0de58e94a0f2e8ee2e8e206829d87]
Former-commit-id: f0cc9b4bb715ef4ec9b6d2e2c4711681d8e9b959

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 tensorflow>=2.4.1
+tensorflow-addons
 numpy
 matplotlib
 jupyter
@@ -7,4 +8,4 @@ Pillow
 scipy
 astropy
 scikit-learn
-sickit-image
+scikit-image
