Refactoring and added images to user-images
Former-commit-id: 66334fecab93f8ce45f936d128678afe0f6fda75
Former-commit-id: 6a0fe17d12aa85ce82c62eb85e3aa2d6f5a3b951 [formerly f1d69ad8ca7c93f70283e982b1a7d5761e2c761f]
Former-commit-id: 05a7d409ec1e34fddc45014ceee9eade17db57ae

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-tensorflow
+tensorflow==2.4.1
 tensorflow-addons
 tensorflow_probability
 numpy
-matplotlib
-jupyter
-#jupyterlab
+matplotlib>=3.4
 Pillow
 scipy
 astropy
